--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!-- <!DOCTYPE html> -->
 <html lang="zh">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>青春印记</title>
   <style>
     * {
@@ -15,18 +16,81 @@
       font-family: "Helvetica Neue", Arial, sans-serif;
       background: linear-gradient(to bottom right, #f0f4f8, #e2ecf4);
       color: #333;
+      justify-content: center;
+      align-items: center;
+      overflow-x: hidden;
     }
+
 
     header {
       text-align: center;
       padding: 40px 20px 20px;
     }
 
-    h1 {
+    /* h1 {
       font-size: 2.5em;
       color: #2c3e50;
       margin-bottom: 10px;
+    } */
+    .title-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem auto;
+    padding: 0;
+  }
+
+  .typing-text {
+    display: inline-block;
+    font-size: clamp(2.2rem, 6vw, 4rem);
+    font-weight: 300;
+    color: #444;
+    padding-right: 0.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: fadeIn 1s ease-in-out;
+    position: relative;
+    line-height: 1.2;
+  }
+
+  .typing-text span {
+    background: linear-gradient(90deg, #43cea2, #185a9d);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-weight: 600;
+    margin-right: 0.6rem;
+    font-size: 1.4em;
+  }
+
+  .typing-text::after {
+    content: '';
+    position: absolute;
+    height: 70%;
+    width: 2px;
+    background: rgba(0, 0, 0, 0.4);
+    right: -5px;
+    top: 50%;
+    transform: translateY(-50%);
+    animation: blink 1s infinite;
+  }
+
+  @keyframes blink {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
     }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+   
 
     .button-group {
       text-align: center;
@@ -47,6 +111,9 @@
 
     .button-group button:hover {
       background: #357ab8;
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+      transform: translateY(-3px);
+      transition: all 0.3s ease;
     }
 
     .gallery {
@@ -100,69 +167,76 @@
     .gallery-item:hover .overlay {
       opacity: 1;
     }
+
     #imageModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-  cursor: zoom-out;
-  transition: opacity 0.3s ease;
-}
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+      cursor: zoom-out;
+      transition: opacity 0.3s ease;
+    }
 
-#imageModal img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
-  box-shadow: 0 8px 25px rgba(255, 255, 255, 0.2);
-  animation: zoomIn 0.3s ease;
-}
+    #imageModal img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+      box-shadow: 0 8px 25px rgba(255, 255, 255, 0.2);
+      animation: zoomIn 0.3s ease;
+    }
 
-@keyframes zoomIn {
-  from {
-    transform: scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
+    @keyframes zoomIn {
+      from {
+        transform: scale(0.8);
+        opacity: 0;
+      }
 
-@media (max-width: 600px) {
-  h1 {
-    font-size: 2em;
-  }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
 
-  .button-group button {
-    padding: 8px 15px;
-    font-size: 0.9em;
-  }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2em;
+      }
 
-  .gallery {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  }
+      .button-group button {
+        padding: 8px 15px;
+        font-size: 0.9em;
+      }
 
-  .gallery-item {
-    border-radius: 8px;
-  }
+      .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      }
 
-  .overlay {
-    font-size: 0.85em;
-  }
-}
+      .gallery-item {
+        border-radius: 8px;
+      }
 
+      .overlay {
+        font-size: 0.85em;
+      }
+    }
   </style>
 </head>
+
 <body>
 
   <header>
-    <h1>📸 青春印记</h1>
+    <div class="title-container">
+
+      <div class="typing-text">
+        <span>📸</span> 青春印记
+      </div>
+     
   </header>
 
   <div class="button-group">
@@ -191,19 +265,19 @@
       <img src="picture/feifei1.jpg" alt="人物传记">
       <div class="overlay">飞飞</div>
     </div>
-     <div class="gallery-item">
+    <div class="gallery-item">
       <img src="picture/feifei2.jpg" alt="人物传记">
       <div class="overlay">飞飞</div>
     </div>
-     <div class="gallery-item">
+    <div class="gallery-item">
       <img src="picture/chuanhui1.jpg" alt="人物传记">
       <div class="overlay">传辉</div>
     </div>
-     <div class="gallery-item">
+    <div class="gallery-item">
       <img src="picture/xinqiang1.jpg" alt="人物传记">
       <div class="overlay">新强</div>
     </div>
-     <div class="gallery-item">
+    <div class="gallery-item">
       <img src="picture/xiaoyan1.jpg" alt="人物传记">
       <div class="overlay">霄岩</div>
     </div>
@@ -221,7 +295,7 @@
       <img src="picture/heying3.jpg" alt="合影">
       <div class="overlay">小宋合影</div>
     </div>
-    
+
   </div>
   <div id="imageModal" style="display:none;" onclick="closeModal()">
     <img id="modalImg" src="" alt="大图预览">
@@ -237,22 +311,22 @@
       document.getElementById(styleId).style.display = 'grid';
     }
     // 点击图片弹出大图
-document.querySelectorAll('.gallery-item img').forEach(img => {
-  img.addEventListener('click', function (e) {
-    e.stopPropagation();
-    const modal = document.getElementById('imageModal');
-    const modalImg = document.getElementById('modalImg');
-    modalImg.src = this.src;
-    modal.style.display = 'flex';
-  });
-});
+    document.querySelectorAll('.gallery-item img').forEach(img => {
+      img.addEventListener('click', function (e) {
+        e.stopPropagation();
+        const modal = document.getElementById('imageModal');
+        const modalImg = document.getElementById('modalImg');
+        modalImg.src = this.src;
+        modal.style.display = 'flex';
+      });
+    });
 
-function closeModal() {
-  document.getElementById('imageModal').style.display = 'none';
-}
+    function closeModal() {
+      document.getElementById('imageModal').style.display = 'none';
+    }
 
   </script>
 
 </body>
-</html>
 
+</html>
