--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@
       <img src="picture/heying3.jpg" alt="合影">
       <div class="overlay">小宋合影</div>
     </div>
+ <div class="gallery-item">
+      <img src="picture/连云港.jpg" alt="合影">
+      <div class="overlay">连云港</div>
+    </div>
 
   </div>
   <div id="imageModal" style="display:none;" onclick="closeModal()">
